--- a/source/assets/styles/recipeUpload.css
+++ b/source/assets/styles/recipeUpload.css
@@ -7,6 +7,7 @@
 
 body {
   min-height: 100vh;
+  min-width: 960px;
   display: flex;
   flex-direction: column;
   background-color: #FFE0BB;
